--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
 
 @custom-variant dark (&:is(.dark *));
+@custom-variant 2k (@media (min-width: 2048px));
+@custom-variant 4k (@media (min-width: 3840px));
 
 :root {
   --font-size: 16px;
